--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Kaozet</title>
+    <script src="annoyingcirklesscript.js"></script>
 </head>
 <body>
     
