The kaoz is evolving

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Kaozet</title>
     <script src="annoyingcirklesscript.js"></script>
+    <script src="annoyingpopupsandstuff.js"></script>
 </head>
 <body>
     
