--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Kaozet</title>
     <script src="annoyingcirklesscript.js"></script>
     <script src="annoyingpopupsandstuff.js"></script>
+    <script src="konami.js"></script>
 </head>
 <body>
     
