--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="annoyingcirklesscript.js"></script>
     <script src="annoyingpopupsandstuff.js"></script>
     <script src="konami.js"></script>
+    <script src="amoogus.js"></script>
 </head>
 <body>
 <div id="clock-container">
